--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -8,35 +8,38 @@ const description = 'A page that tells you all about Rohan Nelson'
 	<p>Here's some random things about me!</p>
 	<ul class="mt-4 pl-10">
 		<li class="list-disc">
-			<strong>I graduated from a Bachelor of Music (Jazz Performance) in 2011.</strong> My first
-			love is electric bass, but I can also play double bass, piano, and guitar (to varying degrees
-			of competency).
-		</li>
-		<li class="list-disc">
 			<strong>I'm a Christian, and I feel called to a teaching ministry within the church.</strong>
-			 I've never been 100% sure what following this calling looks like in practice, but so far I've
-			engaged in volunteer ministry and held two paid pastoral roles where I've been working with
-			youth or children (amongst other things).
+			I've never been 100% sure what following this calling looks like in practice, but so far I've engaged
+			in volunteer ministry and held two paid pastoral roles where I've been working with youth or children
+			(amongst other things).
 		</li>
 		<li class="list-disc">
-			<strong>I graduated from a Master of Divinity in 2018.</strong> I've also had one journal
-			article published so far, and would be keen to do a PhD when the time is right!
+			<strong>I'm currently working in web development.</strong> I needed to take some time out from
+			church work for my family, so my hobby of web development has become a career! I still code for
+			fun when I have time. 😀
+		</li>
+		<li class="list-disc">
+			<strong>I graduated from a Bachelor of Music (Jazz Performance) in 2011.</strong> My first love
+			is electric bass, but I can also play double bass, piano, and guitar (to varying degrees of competency).
+		</li>
+		<li class="list-disc">
+			<strong>I graduated from a Master of Divinity in 2018.</strong> I've also had one journal article
+			published so far, and would be keen to do a PhD when the time is right!
 		</li>
 		<li class="list-disc">
 			<strong>I love languages!</strong> I've really enjoyed learning biblical Greek and Hebrew, and
-			have tried to keep my knowledge of these languages alive. I've also completed half a Latin
-			text-book, dabbled in German, and have now started on programming languages.
+			have tried to keep my knowledge of these languages alive. I've also completed half a Latin text-book,
+			dabbled in German, and am now working on programming languages.
 		</li>
 		<li class="list-disc">
-			<strong>I've recently completed a Graduate Certificate in Counselling.</strong> There's a
-			story behind why I did this, but I'm also interested in the relationship between theology and
-			psychology!
+			<strong>I've recently completed a Graduate Certificate in Counselling.</strong> There's a story
+			behind why I did this, but I'm also interested in the relationship between theology and psychology!
 		</li>
 		<li class="list-disc">
-			<strong>I'm a father of three, and a husband of one!</strong> Nothing has changed my life
-			quite as radically as getting married and having children. It's not every day that you commit
-			to someone for life, or embark on a series of projects that take at least eighteen years each
-			before they're ready to fly the nest 🙂
+			<strong>I'm a father of three, and a husband of one!</strong> Nothing has changed my life quite
+			as radically as getting married and having children. It's not every day that you commit to someone
+			for life, or embark on a series of projects that take at least eighteen years each before they're
+			ready to fly the nest 🙂
 		</li>
 	</ul>
 	<h2 class="mt-5">And A Little More About This Site</h2>
