--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -51,17 +51,16 @@ const description = "Rohan Nelson's home page and blog."
 		>
 			<div class="space-y-3">
 				<p>
-					I've been learning web devel&shy;opment for fun since late 2021. This site is an
-					oppor&shy;tunity for me to play around and try some&nbsp;things.
+					In 2021 I started coding for fun, and in 2024 I started working in web develop&shy;ment.
 				</p>
+				<p>This site is an oppor&shy;tunity for me to play around and try some&nbsp;things.</p>
 				<p>
-					For example, I've been learning various technol&shy;ogies including React and SQL by
-					making a
+					For example, I first learnt React and SQL by making a
 					<a href="/projects" class="underline">board&nbsp;games&nbsp;app</a>.
 				</p>
 				<p>
 					Also, check out <a href="https://livinggracedianella.org.au" class="underline"
-						>Living Grace Dianella's new website!</a
+						>Living Grace Dianella's website!</a
 					> It was built by me and some friends using Astro and&nbsp;Strapi.
 				</p>
 			</div>
