--- a/src/pages/projects/index.astro
+++ b/src/pages/projects/index.astro
@@ -7,6 +7,7 @@ import { emailExcerpt } from '../../components/utils'
 const title = 'My Web Projects'
 const description = 'A home for my web experiments'
 //Auth handled in middleware/index.js
+//@ts-ignore
 const email = Astro.locals.email
 ---
 
